@@ -1,6 +1,6 @@
 <configuration>
 	<appSettings>
-		<add key="key" value="my freaking valuesn" />
+		<add key="key" value="my freaking value" />
 	</appSettings>
 	<connectionStrings>
 		<add name="SqliteConnectionString" connectionString="URI=file:SqliteTest.db"/>
