@@ -1,3 +1,8 @@
+2010-05-15  karbon  <karbon@gmail.com>
+
+	* app.config:
+	* SqliteAccessTests.cs: 
+
 2010-05-02  karbon  <karbon@gmail.com>
 
 	* app.config:
